# frappe-goes-paperless

./: .gitignore  README.md  import-paperless.py  pyproject.toml
frappe_goes_paperless/: hooks.py  modules.txt  paperless_sync.md
frappe_goes_paperless/frappe_goes_paperless/: tools.py
frappe_goes_paperless/frappe_goes_paperless/custom/: customer.json  packed_item.json  purchase_invoice.json  purchase_invoice_item.json  sales_invoice.json  sales_invoice_item.json  supplier.json
frappe_goes_paperless/frappe_goes_paperless/doctype/ai/: ai.js  ai.json  ai.py  test_ai.py
frappe_goes_paperless/frappe_goes_paperless/doctype/ai_prompt/: ai_prompt.js  ai_prompt.json  ai_prompt.py  test_ai_prompt.py
frappe_goes_paperless/frappe_goes_paperless/doctype/ai_query/: ai_query.js  ai_query.json  ai_query.py  test_ai_query.py
frappe_goes_paperless/frappe_goes_paperless/doctype/ai_settings/: ai_settings.js  ai_settings.json  ai_settings.py  test_ai_settings.py
frappe_goes_paperless/frappe_goes_paperless/doctype/paperless_document/: paperless_document.js  paperless_document.json  paperless_document.py  paperless_document_dashboard.py  paperless_document_list.js  test_paperless_document.py
frappe_goes_paperless/frappe_goes_paperless/doctype/paperless_document_type_mapping/: paperless_document_type_mapping.js  paperless_document_type_mapping.json  paperless_document_type_mapping.py  test_paperless_document_type_mapping.py
frappe_goes_paperless/frappe_goes_paperless/doctype/paperless_ngx_settings/: paperless_ngx_settings.js  paperless_ngx_settings.json  (+2 more)
