[project]
name = "frappe_goes_paperless"
authors = [
    { name = "itsdave GmbH", email = "dev@itsdave.de"}
]
description = "App for Frappe Framework and ERPNext to connect to Paperless-ngx document management system"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
